# amp-proxy-rs

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  GEMINI_BRIDGE_DEEPSEEK_TEST_NOTES.md  NOTICE.md  README.en.md  README.md  README.zh-CN.md  config.example.yaml
.github/workflows/: ci.yml  release.yml
benches/: translators.rs
benches/fixtures/: generate.js  large.json  medium.json  small.json
scripts/: restart.ps1
src/: access_log.rs  auth.rs  body_capture.rs  bodylimit.rs  capture_pretty.rs  config.rs  error.rs  init.rs  lib.rs  main.rs  metrics.rs  proxy.rs  server.rs  thinking.rs  util.rs
src/amp/: fallback_handlers.rs  gemini_bridge.rs  mod.rs  model_mapping.rs  prefixed_body.rs  proxy.rs  response_rewriter.rs  routes.rs  secret.rs
src/customproxy/: extract_leaf.rs  gemini_stream_translator.rs  gemini_translator.rs  messages_translator.rs  mod.rs  responses_stream_translator.rs  responses_translator.rs  retry_transport.rs  sse_messages_collapser.rs  sse_rewriter.rs
