[package]
name = "amp-proxy"
version = "0.1.0"
edition = "2021"
description = "Rust port of amp-proxy — focused reverse proxy for Sourcegraph Amp CLI"
license = "MIT"

[[bin]]
name = "amp-proxy"
path = "src/main.rs"

[lib]
name = "amp_proxy"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
http = "1"
bytes = "1"
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1"
anyhow = "1"
url = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
arc-swap = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
# Smaller binaries are one of the reasons you started this port. Keep the
# knobs here so `cargo build --release` produces a stripped, LTO'd binary
# without extra flags.
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
